--- a/index.html
+++ b/index.html
@@ -4,33 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Rainy Cloud Animation</title>
+    <title>Ambient Light Effect</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="cloud"></div>
-        <div class="rain">
-            <span style="--i:11"></span>
-            <span style="--i:12"></span>
-            <span style="--i:10"></span>
-            <span style="--i:14"></span>
-            <span style="--i:18"></span>
-            <span style="--i:16"></span>
-            <span style="--i:19"></span>
-            <span style="--i:20"></span>
-            <span style="--i:19"></span>
-            <span style="--i:10"></span>
-            <span style="--i:16"></span>
-            <span style="--i:14"></span>
-            <span style="--i:18"></span>
-            <span style="--i:11"></span>
-            <span style="--i:13"></span>
-            <span style="--i:15"></span>
-            <span style="--i:12"></span>
-            <span style="--i:17"></span>
-            <span style="--i:13"></span>
-            <span style="--i:15"></span>
+    <div class="cube">
+        <div class="top"></div>
+        <div>
+            <span style="--i:0;"></span>
+            <span style="--i:1;"></span>
+            <span style="--i:2;"></span>
+            <span style="--i:3;"></span>
         </div>
     </div>
 </body>
