--- a/index.html
+++ b/index.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ambient Light Effect</title>
+    <title>Neon Light Button Animation Effects on Hover</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="cube">
-        <div class="top"></div>
-        <div>
-            <span style="--i:0;"></span>
-            <span style="--i:1;"></span>
-            <span style="--i:2;"></span>
-            <span style="--i:3;"></span>
-        </div>
-    </div>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Neon Button
+    </a>
 </body>
 </html>
