glowing-text-animation

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Water Wave Text Animation Effects</title>
+    <title>Glowing Text Animation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="content">
-        <h2>Water</h2>
-        <h2>Water</h2>
-    </div>
+    <h1>
+        <span>S</span>
+        <span>t</span>
+        <span>u</span>
+        <span>n</span>
+        <span>n</span>
+        <span>i</span>
+        <span>n</span>
+        <span>g</span>
+    </h1>
 </body>
 </html>
