--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glowing Text Animation</title>
+    <title>3D Wavy Circle Loading Animation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-        <span>S</span>
-        <span>t</span>
-        <span>u</span>
-        <span>n</span>
-        <span>n</span>
-        <span>i</span>
-        <span>n</span>
-        <span>g</span>
-    </h1>
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
 </body>
 </html>
