animated-eyes-follow-mouse-cursor

--- a/index.html
+++ b/index.html
@@ -4,14 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Flip Checkbox Animation</title>
+    <title>Animated Eyes Follow Mouse Cursor</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-    <div class="center">
-        <input type="checkbox" name="">
-        <span>On</span>
-        <span>Off</span>
+    <div class="box">
+        <div class="eye"></div>
+        <div class="eye"></div>
     </div>
+
+    <script>
+        document.body.addEventListener('mousemove', eyeball);
+
+        function eyeball() {
+            const eye = document.querySelectorAll('.eye');
+            eye.forEach(function (eye) {
+                let x = (eye.getBoundingClientRect().left) + (eye.clientWidth / 2);
+                let y = (eye.getBoundingClientRect().top) + (eye.clientHeight / 2);
+
+                let radian = Math.atan2(event.pageX - x, event.pageY - y);
+                let rotation = (radian * (180 / Math.PI) * -1) + 270;
+                let rot = rotation.toFixed(2);
+                eye.style.transform = "rotate("+rot+"deg)";
+            });
+        }
+    </script>
 </body>
 </html>
