background-parallax-effect

--- a/index.html
+++ b/index.html
@@ -11,18 +11,30 @@
 </head>
 <body>
     <section>
-        <img src="img/1.png" data-speed="-5" class="layer" alt="">
-        <img src="img/2.png" data-speed="5" class="layer" alt="">
-        <img src="img/3.png" data-speed="2" class="layer" alt="">
-        <img src="img/4.png" data-speed="6" class="layer" alt="">
-        <img src="img/5.png" data-speed="8" class="layer" alt="">
-        <img src="img/6.png" data-speed="-2" class="layer" alt="">
-        <img src="img/7.png" data-speed="4" class="layer" alt="">
-        <img src="img/8.png" data-speed="-9" class="layer" alt="">
-        <img src="img/9.png" data-speed="6" class="layer" alt="">
-        <img src="img/10.png" data-speed="-5" class="layer" alt="">
-        <img src="img/11.png" data-speed="-7" class="layer" alt="">
-        <img src="img/12.png" data-speed="5" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/1_jqk3u5.png" 
+        data-speed="-5" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/2_ioeclf.png"
+         data-speed="5" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052963/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/3_nvr1th.png"
+         data-speed="2" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/4_anme3g.png"
+         data-speed="6" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/5_ue0nac.png"
+         data-speed="8" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/6_agrsww.png"
+         data-speed="-2" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/7_ee2s7q.png"
+         data-speed="4" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/8_g2howo.png"
+         data-speed="-9" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/9_qjza4n.png"
+         data-speed="6" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/10_bbstin.png"
+         data-speed="-5" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/11_r8mzzi.png"
+         data-speed="-7" class="layer" alt="">
+        <img src="https://res.cloudinary.com/dl38nyo08/image/upload/v1653052962/Background%20Parallax%20Effect%20on%20Mouse%20Cursor%20%28Codepen%29/12_xrhzro.png"
+         data-speed="5" class="layer" alt="">
         <h2 data-speed="2" class="layer">Parallax</h2>
     </section>
 
