--- a/index.html
+++ b/index.html
@@ -4,57 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Isometric Social Media Icon Hover</title>
+    <title>Endless Road Animation Effects</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/60aa6b5946.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <ul>
-        <li>
-            <a href="#">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span class="fa fa-facebook"></span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span class="fa fa-twitter"></span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span class="fa fa-whatsapp"></span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span class="fa fa-linkedin"></span>
-            </a>
-        </li>
-        <li>
-            <a href="#">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-                <span class="fa fa-instagram"></span>
-            </a>
-        </li>
-    </ul>
+    <div class="infinite">
+        <div class="shadow"></div>
+    </div>
 </body>
 </html>
