snale-cube-loader

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Endless Road Animation Effects</title>
+    <title>Snake Cube Loader Animation Effects</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/60aa6b5946.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="infinite">
-        <div class="shadow"></div>
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 </body>
 </html>
