video-inside-text

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Cube Loader Animation Effects</title>
+    <title>Video Inside Text Animation Effects</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/60aa6b5946.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="loader">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+    <div class="banner">
+        <video autoplay muted loop>
+            <source src="https://res.cloudinary.com/dl38nyo08/video/upload/v1653059507/Video%20Inside%20Text%20Animation%20Effects%20%28Codepen%29/video_yhmyaw.mp4" type="video/mp4">
+        </video>
+        <h2>Video</h2>
     </div>
 </body>
 </html>
