glowing-tubelight-text

--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Inside Text Animation Effects</title>
+    <title>Glowing Tubelight Text Animation Effects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="banner">
-        <video autoplay muted loop>
-            <source src="https://res.cloudinary.com/dl38nyo08/video/upload/v1653059507/Video%20Inside%20Text%20Animation%20Effects%20%28Codepen%29/video_yhmyaw.mp4" type="video/mp4">
-        </video>
-        <h2>Video</h2>
-    </div>
+    <h2 contenteditable="true">Edit me</h2>
 </body>
 </html>
