wooden-text-typography

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glowing Tubelight Text Animation Effects</title>
+    <title>Wooden Text Typography Effects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2 contenteditable="true">Edit me</h2>
+    <h1 data-text="Wooden Text Typography">Wooden Text Typography</h1>
 </body>
 </html>
