--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wooden Text Typography Effects</title>
+    <title>Animated Hot Cup of Tea</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 data-text="Wooden Text Typography">Wooden Text Typography</h1>
+    <div class="container">
+        <div class="plate"></div>
+        <div class="cup">
+            <div class="top">
+                <div class="vapour"></div>
+                <div class="circle">
+                    <div class="tea"></div>
+                </div>
+            </div>
+            <div class="handle"></div>
+        </div>
+    </div>
 </body>
 </html>
