expanding-flex-cards

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                  <i class="fas fa-walking"></i>
               </div>
               <div class="info">
-                 <div class="main">Blonkisoaz</div>
-                 <div class="sub">Omuke trughte a otufta</div>
+                 <div class="main">Title1</div>
+                 <div class="sub">Parargraph1</div>
               </div>
            </div>
         </div>
@@ -29,8 +29,8 @@
                  <i class="fas fa-snowflake"></i>
               </div>
               <div class="info">
-                 <div class="main">Oretemauw</div>
-                 <div class="sub">Omuke trughte a otufta</div>
+                 <div class="main">Title2</div>
+                 <div class="sub">Parargraph2</div>
               </div>
            </div>
         </div>
@@ -41,8 +41,8 @@
                  <i class="fas fa-tree"></i>
               </div>
               <div class="info">
-                 <div class="main">Iteresuselle</div>
-                 <div class="sub">Omuke trughte a otufta</div>
+                 <div class="main">Title3</div>
+                 <div class="sub">Parargraph3</div>
               </div>
            </div>
         </div>
@@ -53,8 +53,8 @@
                  <i class="fas fa-tint"></i>
               </div>
               <div class="info">
-                 <div class="main">Idiefe</div>
-                 <div class="sub">Omuke trughte a otufta</div>
+                 <div class="main">Title4</div>
+                 <div class="sub">Parargraph4</div>
               </div>
            </div>
         </div>
@@ -65,14 +65,12 @@
                  <i class="fas fa-sun"></i>
               </div>
               <div class="info">
-                 <div class="main">Inatethi</div>
-                 <div class="sub">Omuke trughte a otufta</div>
+                 <div class="main">Title5</div>
+                 <div class="sub">Parargraph5</div>
               </div>
            </div>
         </div>
      </div>
-     
-     <a href="http://victorofvalencia-blog.tumblr.com" target="_blank" class="credit">Photos from Victor of Valencia on tumblr</a>
 
      <script>
         $(".option").click(function(){
