arrow-menu-indicator

--- a/index.html
+++ b/index.html
@@ -4,18 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Isometric Menu</title>
+    <title>Arrow Menu Indicator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul>
-        <li style="--i:6;"><a href="#">Home</a></li>
-        <li style="--i:5;"><a href="#">About</a></li>
-        <li style="--i:4;"><a href="#">Services</a></li>
-        <li style="--i:3;"><a href="#">Portfolio</a></li>
-        <li style="--i:2;"><a href="#">Our Team</a></li>
-        <li style="--i:1;"><a href="#">Contact</a></li>
+        <span id="marker"></span>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Our Services</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
     </ul>
+
+    <script>
+        let marker = document.querySelector('#marker');
+        let item = document.querySelectorAll('ul li a');
+
+        function Indicator(e) {
+            marker.style.top = e.offsetTop+'px';
+            marker.style.width = e.offsetWidth+'px';
+        }
+
+        item.forEach(link => {
+            link.addEventListener('mousemove', (e) => {
+                Indicator(e.target);
+            })
+        })
+    </script>
     
 </body>
 </html>
