--- a/index.html
+++ b/index.html
@@ -4,35 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Text Cube Animation Effects</title>
+    <title>Wavy Text Animation Effects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="text" style="--j:0">
-            <span style="--i:0">2</span>
-            <span style="--i:1">3</span>
-            <span style="--i:2">4</span>
-            <span style="--i:3">5</span>
-        </div>
-        <div class="text" style="--j:1">
-            <span style="--i:0">0</span>
-            <span style="--i:1">1</span>
-            <span style="--i:2">2</span>
-            <span style="--i:3">3</span>
-        </div>
-        <div class="text" style="--j:2">
-            <span style="--i:0">2</span>
-            <span style="--i:1">3</span>
-            <span style="--i:2">4</span>
-            <span style="--i:3">5</span>
-        </div>
-        <div class="text" style="--j:3">
-            <span style="--i:0">2</span>
-            <span style="--i:1">3</span>
-            <span style="--i:2">4</span>
-            <span style="--i:3">5</span>
-        </div>
+    <div class="wavy">
+        <span style="--i:1">L</span>
+        <span style="--i:2">o</span>
+        <span style="--i:3">a</span>
+        <span style="--i:4">d</span>
+        <span style="--i:5">i</span>
+        <span style="--i:6">n</span>
+        <span style="--i:7">g</span>
+        <span style="--i:8">.</span>
+        <span style="--i:9">.</span>
+        <span style="--i:10">.</span>
     </div>
     
 </body>
