--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tower Block Game CSS JS</title>
+    <title>Memory Game CSS JS</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" integrity="sha512-dLxUelApnYxpLt6K2iomGngnHO83iUvZytA3YjDUCjT0HDOHKXnVYdf3hU4JjM8uEhxf9nD1/ey98U3t2vZ0qQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
-    <div id="container">
-        <div id="game"></div>
-        <div id="score">0</div>
-        <div id="instructions">Click (or press the spacebar) to place the block</div>
-        <div class="game-over">
-          <h2>Game Over</h2>
-          <p>You did great, you're the best.</p>
-          <p>Click or spacebar to start again</p>
+    <div class="wrap">
+        <div class="game"></div>
+            
+        <div class="modal-overlay">
+            <div class="modal">
+                <h2 class="winner">You Rock!</h2>
+                <button class="restart">Play Again?</button>
+                <p class="share-text">Share it?</p>
+                <ul class="social">
+                    <li><a target="_blank" class="twitter" href="#"><span class="fa fa-twitter"></span></a></li>
+                    <li><a target="_blank" class="facebook" href="#"><span class="fa fa-facebook"></span></a></li>
+                    <li><a target="_blank" class="google" href="#"><span class="fa fa-google"></span></a></li>
+                </ul>
+            </div>
         </div>
-        <div class="game-ready">
-          <div id="start-button">Start</div>
-          <div></div>
-        </div>
-      </div>
+        <footer>
+            <p class="disclaimer">All logos are property of their respective owners, No Copyright infringement intended.</p>
+        </footer>
+    </div>    
 
-      <script src="game.js"></script>
-    
+    <script src="game.js"></script>
+
 </body>
 </html>
