--- a/index.html
+++ b/index.html
@@ -4,31 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Game CSS JS</title>
+    <title>Ping Pong Game JS</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
-    <div class="wrap">
-        <div class="game"></div>
-            
-        <div class="modal-overlay">
-            <div class="modal">
-                <h2 class="winner">You Rock!</h2>
-                <button class="restart">Play Again?</button>
-                <p class="share-text">Share it?</p>
-                <ul class="social">
-                    <li><a target="_blank" class="twitter" href="#"><span class="fa fa-twitter"></span></a></li>
-                    <li><a target="_blank" class="facebook" href="#"><span class="fa fa-facebook"></span></a></li>
-                    <li><a target="_blank" class="google" href="#"><span class="fa fa-google"></span></a></li>
-                </ul>
-            </div>
-        </div>
-        <footer>
-            <p class="disclaimer">All logos are property of their respective owners, No Copyright infringement intended.</p>
-        </footer>
-    </div>    
-
+    <canvas></canvas>
     <script src="game.js"></script>
 
 </body>
