analog-clock-light-dark

--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Calendar Widget</title>
+    <title>Analog Clock Widget Light/Dark</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
 </head>
 <body>
-    <div id="calendar"></div>
-    <script src="event.js"></script>
+
+    <div class="page-header"> Analog Clock </div>
+    <div class="clock">
+        <div class="hour"></div>
+        <div class="min"></div>
+        <div class="sec"></div>
+    </div>
+    <div class="switch-cont">
+        <button class="switch-btn"> Light </button>
+    </div>
+
+    <script src="index.js"></script>
+
 
 </body>
 </html>
